Server Rest API

--- a/assets/index.html
+++ b/assets/index.html
@@ -11,13 +11,13 @@
         <div class="row">
             <div class="column">
                 <header>
-                    <h1>Calculator</h1>
+                    <h1>Calculon</h1>
                 </header>
             </div>
         </div>
         <div class="row">
             <div class="column">
-                <div class="ui center aligned segment ">
+                <div class="ui center aligned red inverted segment ">
                     <div class="ui fluid input">
                         <input type="text" disabled>
                     </div>
@@ -66,7 +66,12 @@
                                         <button class="circular ui button">0</button>
                                     </div>
                                     <div class="column">
-                                        <button class="circular ui button">-x</button>
+                                        <div class="circular ui animated fade button">
+                                            <div class="hidden content">Negate</div>
+                                            <div class="visible content">
+                                                &nbsp;&nbsp;-X&nbsp;&nbsp;
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -78,10 +83,20 @@
                                         <button class="circular ui button">&#247;</button>
                                     </div>
                                     <div class="column">
-                                        <button class="circular ui button"><i class="undo icon"></i></button>
+                                        <div class="circular ui animated fade button">
+                                            <div class="hidden content">Undo</div>
+                                            <div class="visible content">
+                                                <i class="undo icon"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="column">
-                                        <button class="circular ui button">3</button>
+                                        <div class="circular ui animated fade button">
+                                            <div class="hidden content">Clear</div>
+                                            <div class="visible content">
+                                                <i class="trash icon"></i>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="three column row">
@@ -100,10 +115,20 @@
                                         <button class="circular ui button">-</button>
                                     </div>
                                     <div class="column">
-                                        <button class="circular ui button">X^2</button>
+                                        <div class="circular ui animated fade button">
+                                            <div class="hidden content">Square</div>
+                                            <div class="visible content">
+                                                X^2
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="column">
-                                        <button class="circular ui button">&#8730;</button>
+                                        <div class="circular ui animated fade button">
+                                            <div class="hidden content">Root</div>
+                                            <div class="visible content">
+                                                &#8730;
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="three column row">
