Before Undo Removal

--- a/assets/index.html
+++ b/assets/index.html
@@ -20,6 +20,7 @@
                 <div class="ui center aligned red inverted segment ">
                     <div class="ui fluid input">
                         <input type="text" ng-model="result" disabled>
+                        <div>{{generateExpression()}}</div>
                     </div>
                     <div class="ui divider"></div>
                     <div class="two column stackable ui grid">
