Calculator functions complete

--- a/assets/index.html
+++ b/assets/index.html
@@ -84,11 +84,8 @@
                                         <button class="circular ui button" ng-click="operate('/')">&#247;</button>
                                     </div>
                                     <div class="column">
-                                        <div class="circular ui animated fade button" ng-click="operate('undo')">
-                                            <div class="hidden content">Undo</div>
-                                            <div class="visible content">
-                                                <i class="undo icon"></i>
-                                            </div>
+                                        <div class="column">
+                                            <button class="circular ui button" ng-click="operate('+')">+</button>
                                         </div>
                                     </div>
                                     <div class="column">
@@ -132,15 +129,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="three column row">
-                                    <div class="column">
-                                        <button class="circular ui button" ng-click="operate('+')">+</button>
-                                    </div>
-                                    <div class="column">
-                                    </div>
-                                    <div class="column">
-                                        <div class="circular fluid ui button" ng-click="operate('=')">=</div>
-                                    </div>
+                                <div class="row">
+                                    <div class="circular fluid ui button" ng-click="operate('=')">=</div>
                                 </div>
                             </div>
                         </div>
